Pull request #19: CPPE Score Gradient Display Fix (Grey out "0")
Merge in NRCSAPPS/cpdifrontend from CIGCPDPH2-1129-Hafiz to develop

Squashed commit of the following:

commit 452f805b4fb8d0fb626e56987de91972c0873108
Author: hafiz.ahmad <hafiz.ahmad@usda.gov>
Date:   Thu Aug 3 13:33:58 2023 -0400

    CPPE Score Gradient Display Fix (Grey out "0")

--- a/src/components/CPPESoreLegend/CPPEScoreLegend.scss
+++ b/src/components/CPPESoreLegend/CPPEScoreLegend.scss
@@ -161,7 +161,7 @@
 }
 .linear-scale{
     height:20px;
-    background: linear-gradient(to right , #236430 0%,#236430 40%,#CD2026 60%,#CD2026 100%);
+    background: linear-gradient(to right , #236430 0%,#236430 30%,#75716E 53%, #CD2026 65%,#CD2026 100%);
      width:97%; 
      margin:auto;
 }
